Agregue webpack para trabajar de manera con typescript y el navegador, cree un archivo booksToRecomend que me permite llevar todos los libros a recomendar de manera efectiva al algoritmo de recomendacion de libros en el archivo rrecomendationsAlgorithm, y en este ultimo archivo cree una base solida como la funcion jobsRecomendationsAlgorithm para orientarme en la futura construccion de las recomendaciones al usuario

--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/arielgenua24/eydlibreria.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ariel Biazzo Genua",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/arielgenua24/eydlibreria/issues"
   },
-  "homepage": "https://github.com/arielgenua24/eydlibreria#readme"
+  "homepage": "https://github.com/arielgenua24/eydlibreria#readme",
+  "devDependencies": {
+    "ts-loader": "^9.2.6",
+    "typescript": "4.4.4",
+    "webpack": "5.59.1",
+    "webpack-cli": "4.9.1"
+  }
 }
