--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/arielgenua24/eydlibreria#readme",
   "devDependencies": {
-    "ts-loader": "^9.2.6",
+    "ts-loader": "9.2.6",
     "typescript": "4.4.4",
     "webpack": "5.59.1",
     "webpack-cli": "4.9.1"
